RESOLVED FIXED53939
fast/css/text-overflow-ellipsis.html failure after r77818/77819
https://bugs.webkit.org/show_bug.cgi?id=53939
Summary fast/css/text-overflow-ellipsis.html failure after r77818/77819
Zhenyao Mo
Reported 2011-02-07 13:28:16 PST
Originally I thought it's due to the new UTF-8 decoder, but after Darin turned it off, this test still fails. Adding it to test_expectations in r77840 for now.
Attachments
Adam Barth
Comment 1 2011-02-07 13:32:34 PST
This test is failing on all ports, as far as I can tell.
Darin Adler
Comment 2 2011-02-07 15:06:08 PST
WebKit Review Bot
Comment 3 2011-02-07 16:14:10 PST
http://trac.webkit.org/changeset/77849 might have broken GTK Linux 32-bit Release The following tests are not passing: fast/table/colspanMinWidth-vertical.html
Note You need to log in before you can comment on or make changes to this bug.