https://bugs.webkit.org/show_bug.cgi?id=53939 fast/css/text-overflow-ellipsis.html failure after r77818/77819

* platform/text/TextCodecICU.cpp:
(WebCore::TextCodecICU::registerExtendedEncodingNames):
Add back the "utf8" synonym for "UTF-8".



Canonical link: https://commits.webkit.org/67908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77849 268f45cc-cd09-0410-ab3c-d52691b4dbfc