Source/WebCore/platform/text/TextCodecICU.cpp
@@ -163,6 +163,7 @@ void TextCodecICU::registerExtendedEncodingNames(EncodingNameRegistrar registrar
     registrar("x-euc", "EUC-JP");
     registrar("x-windows-949", "windows-949");
     registrar("x-uhc", "windows-949");
+    registrar("utf8", "UTF-8");
     registrar("shift-jis", "Shift_JIS");
 
     // These aliases are present in modern versions of ICU, but use different codecs, and have no standard names.
